update: Epic api added for earth photo but epic api currently unavalible
